--- a/ScheduledBackgroundTask/ScheduledBackgroundTask.csproj
+++ b/ScheduledBackgroundTask/ScheduledBackgroundTask.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
-    <Compile Include="ReminderReceiver.cs" />
+    <Compile Include="ScheduleReceiver.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
