--- a/ScheduledBackgroundTask/ScheduledBackgroundTask.csproj
+++ b/ScheduledBackgroundTask/ScheduledBackgroundTask.csproj
@@ -56,6 +56,7 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BootDeviceReceiver.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="ScheduleReceiver.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
